[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-test"
dynamic = ["version"]
description = 'Tests'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[tool.hatch.envs.default]
dependencies = [
    "Flask",
    "flake8",
    "pytest",
    "black",
    "duckdb",
    "requests",
    "pydantic"
]

[tool.hatch.version]
path = "flask_test/__init__.py"

[tool.hatch.build]
include = ["flask_test/*.py"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
